Bug 445441 - Dropping multiple files on the desktop only positions one file at the mouse position
Summary: Dropping multiple files on the desktop only positions one file at the mouse p...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-11-13 19:28 UTC by Derek Christ
Modified: 2022-02-02 19:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Derek Christ 2021-11-13 19:28:10 UTC
SUMMARY
When dropping multiple files onto the desktop, only one will be actually dropped at the mouse position. The other items will just fill up at the top left corner.


STEPS TO REPRODUCE
1. Drag multiple files from Dolphin onto the desktop
2. See that only one item will be at the mouse position

EXPECTED RESULT
All files dropped at mouse position.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20211110
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.14.14-1-default (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2022-01-31 13:01:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/836
Comment 2 Nate Graham 2022-02-02 18:47:42 UTC
Git commit df35f9e2ed276c7001509a28b3e7e862124163f4 by Nate Graham, on behalf of Severin von Wnuck.
Committed on 02/02/2022 at 18:47.
Pushed by ngraham into branch 'master'.

positioner: Fix deferred move with multiple items

Dropping multiple files on a folder view (e.g. desktop) only positions
one file correctly.
Calling `Positioner::move` multiple times overwrites the
previous moves in `m_deferMovePositions`.
Appending the moves to `m_deferMovePositions` fixes the positioning.

M  +1    -1    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/df35f9e2ed276c7001509a28b3e7e862124163f4
Comment 3 Nate Graham 2022-02-02 18:53:15 UTC
Git commit 8dfaf9b4385e893c3d3abe038a42a05f6a101180 by Nate Graham, on behalf of Severin von Wnuck.
Committed on 02/02/2022 at 18:53.
Pushed by ngraham into branch 'Plasma/5.24'.

positioner: Fix deferred move with multiple items

Dropping multiple files on a folder view (e.g. desktop) only positions
one file correctly.
Calling `Positioner::move` multiple times overwrites the
previous moves in `m_deferMovePositions`.
Appending the moves to `m_deferMovePositions` fixes the positioning.


(cherry picked from commit df35f9e2ed276c7001509a28b3e7e862124163f4)

M  +1    -1    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/8dfaf9b4385e893c3d3abe038a42a05f6a101180