positioner: Fix deferred move with multiple items

Dropping multiple files on a folder view (e.g. desktop) only positions
one file correctly.
Calling `Positioner::move` multiple times overwrites the
previous moves in `m_deferMovePositions`.
Appending the moves to `m_deferMovePositions` fixes the positioning.

BUG: 445441


(cherry picked from commit df35f9e2ed276c7001509a28b3e7e862124163f4)